# key-safe

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/key_safe/: __main__.py  cli.py  constants.py  encryption.py  storage.py
tests/key_safe/: test_encryption.py  test_storage.py
