[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "key-safe"
version = "0.1.0"
authors = [
  { name="Joel Miller", email="joelsamiller@gmail.com" },
]
description = "Simple cli app for securely storing passwords and tokens."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=44.0.1"
]
[project.scripts]
key-safe = "key_safe.__main__:main"

[project.optional-dependencies]
dev = ["pre-commit", "pytest"]