[build-system]
requires = ["uv_build>=0.7.7,<0.8.0"]
build-backend = "uv_build"
[project]
name = "key-safe"
version = "0.1.0"
authors = [
  { name="Joel Miller", email="joelsamiller@gmail.com" },
]
description = "Simple cli app for securely storing passwords and tokens."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=45.0.2",
    "pyperclip>=1.9.0",
    "tomlkit>=0.13.2",
]
[project.scripts]
key-safe = "key_safe.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

